Tried some of Java 9 features